--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -1,3 +1,7 @@
 <h1>Marketplace</h1>
 
-<p>All our fine prodicts will be listed here shortly!</p>
+<div *ngFor="let album of albums" class="panel pane-default">
+  <div class="panel-body">
+    <h4><em>{{album.title}}</em> by: {{album.artist}} </h4>
+  </div>
+</div>
