Add service and mock album file. Display album details when user clicks on specific album. Implement dynamic routing.

--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -1,6 +1,6 @@
 <h1>Marketplace</h1>
 
-<div *ngFor="let album of albums" class="panel pane-default">
+<div *ngFor="let album of albums" (click)="goToDetailPage(album)" class="panel panel-default">
   <div class="panel-body">
     <h4><em>{{album.title}}</em> by: {{album.artist}} </h4>
   </div>
