Add database, refactor.

--- a/src/app/album-detail/album-detail.component.html
+++ b/src/app/album-detail/album-detail.component.html
@@ -1,5 +1,5 @@
 <div class="details">
-  <h3>Title: {{albumToDisplay.title}}</h3>
-  <h4>Artist: {{albumToDisplay.artist}}</h4>
-  <p>Description: {{albumToDisplay.description}}</p>
+  <h3>Title: {{(albumToDisplay | async).title}}</h3>
+  <h4>Artist: {{(albumToDisplay | async).artist}}</h4>
+  <p>Description: {{(albumToDisplay | async).description}}</p>
 </div>
