--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -1,7 +1,8 @@
 <h1>Marketplace</h1>
 
-<div *ngFor="let album of albums" (click)="goToDetailPage(album)" class="panel panel-default">
+<div *ngFor="let album of albums | async" (click)="goToDetailPage(album)" class="panel panel-default">
   <div class="panel-body">
-    <h4><em>{{album.title}}</em> by: {{album.artist}} </h4>
+    <h3><em>{{album.title}} by {{album.artist}}</em></h3>
   </div>
+
 </div>
